<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DataBase" >

    <Button
        android:id="@+id/AddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/AddContact" />

    <Button
        android:id="@+id/RemoveContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/RemoveContact" />

    <Button
        android:id="@+id/ReadContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RemoveContact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/ReadContact" />

</RelativeLayout>
